# efrro_form_c_json

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile.toml  README.md  README_IT.md  README_fetchmod.md  TODO.md  efrro_form_c.json  efrro_form_c_format.json  lmakeversionfromdate.json  optimize.md
doc/amafatt/: all.html  index.html  sidebar-items.js
doc/amafatt/amazonmod/: fn.amazon_txt_create_vector_of_order_id.html  fn.replace_sku_name.html
doc/amafatt/credentialsmod/: fn.load_credentials.html  index.html
doc/amafatt/fetchmod/: index.html
doc/amafatt/isocountriesmod/: constant._IMPL_DESERIALIZE_FOR_Country.html  constant._IMPL_SERIALIZE_FOR_Country.html  index.html  sidebar-items.js  struct.Country.html
doc/amafatt/reqbodymod/: fn.articolo_template.html  fn.create_reqbody_info.html  fn.create_webrequest.html  fn.create_webrequest_from_rrc.html
doc/amafatt/rootrenderingmod/: constant._IMPL_DESERIALIZE_FOR_RootRenderingComponent.html  constant._IMPL_SERIALIZE_FOR_RootRenderingComponent.html  index.html  sidebar-items.js  struct.RootRenderingComponent.html
doc/implementors/core/clone/: trait.Clone.js
doc/implementors/core/fmt/: trait.Debug.js
doc/implementors/core/marker/: trait.Freeze.js  trait.Send.js  trait.Sync.js  trait.Unpin.js
doc/implementors/serde/de/: trait.Deserialize.js  trait.Visitor.js
doc/implementors/serde/ser/: trait.Serialize.js
doc/implementors/std/panic/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
doc/src/amafatt/: credentialsmod.rs.html  isocountriesmod.rs.html  reqbodymod.rs.html
docs/: aliases.js  index.html  search-index.js  settings.html  source-files.js
docs/amafatt/: fn.log1.html  fn.wasm_bindgen_start.html  index.html
docs/amafatt/amazonmod/: fn.amazon_single_order_id_process.html  fn.replace_ship_county_dependent.html  fn.replace_sku_name.html  index.html  sidebar-items.js  type.Record.html
docs/amafatt/credentialsmod/: fn.save_credentials_to_localstorage.html  sidebar-items.js
docs/amafatt/fetchmod/: fn.fetch_response.html  sidebar-items.js
docs/amafatt/isocountriesmod/: fn.get_country_name.html
docs/amafatt/reqbodymod/: fn.articolo_template.html  fn.create_reqbody_info.html  fn.create_reqbody_ricevute_nuovo.html  fn.create_webrequest.html  fn.create_webrequest_from_rrc.html  index.html  sidebar-items.js
docs/amafatt/rootrenderingmod/: fn.div_credentials.html  fn.replace_product_name.html  fn.update_rrc_respbody.html  index.html  struct.RootRenderingComponent.html
docs/implementors/dodrio/render/: trait.Render.js
docs/src/amafatt/: amazonmod.rs.html  fetchmod.rs.html  lib.rs.html  reqbodymod.rs.html  rootrenderingmod.rs.html
old_src/: fetchjsonformat.old_rs  readme.md  rootrendering.old_rs
src/: amazonmod.rs  credentialsmod.rs  fetchjsonaccommodationmod.rs  fetchjsonformat.rs  fetchjsonformatmod.rs  fetchjsonhostel.rs  fetchjsonhostelmod.rs  fetchmod.rs  isocountriesmod.rs  lib.rs  logmod.rs  reqbodymod.rs  rootrenderingmod.rs  stringmod.rs  unwrapmod.rs
temp/: 17208972467018107.txt  amazon.txt  amazon_vertical.odt  dettagli.txt  nuovo.txt
webfolder/: efrro_form_c_format.json  index.html
webfolder/css/: amafatt.css  efrro_form_c_json.css
webfolder/efrro_form_c_json_hostels/Emails/: FormCInvite.odt  SentEmails.odt
webfolder/efrro_form_c_json_hostels/Emails/ListsNew/: List of B and B Homestay units_not transfered.txt
webfolder/efrro_form_c_json_hostels/Emails/ListsOld/: List of B and B Homestay units.txt
webfolder/efrro_form_c_json_hostels/sturmfrei_goa/: hostel.json
webfolder/efrro_form_c_json_hostels/sturmfrei_gokarna/: hostel.json
webfolder/efrro_form_c_json_hostels/sturmfrei_jaipur/: hostel.json
webfolder/example/: FormCInvite.html
webfolder/hostels/sturmfrei_goa/: hostel.json
