[package]
name = "efrro_form_c_json"
version = "19.11.6-11.31"
authors = ["Luciano Bestia <luciano.bestia@gmail.com>"]
edition = "2018"
description="User iterface to enter data for e-frro and export it as json."
repository = "https://github.com/LucianoBestia/efrro_form_c_json"
readme = "README.md"
license = "MIT"
keywords = ["wasm"]
categories = ["e.frro","form C"]

[lib]
crate-type = ["cdylib"]

[profile.release]
#smaller wasm size
lto = true
#optimize for size 's', more opt for size 'z'
opt-level = 'z'

[dependencies]
wasm-bindgen = { version = "0.2.49", features = ["serde-serialize"] }
js-sys = "0.3"
unwrap = "1.2.1"
dodrio = "0.1.0"
console_error_panic_hook = "0.1.6"
serde = { version = "1.0.98", features = ["derive"] }
serde_derive = "1.0.98"
serde_json = "1.0"
futures = "0.1.26"
wasm-bindgen-futures = "0.3.26"
log = "0.4.8"
typed-html = {version="0.2.1", features = ["dodrio_macro"]}
indexmap={ version = "1.3.0", features = ["serde-1"] }

[dependencies.web-sys]
version = "0.3.26"
features = [
  "console",
  "Document",
  "Element",
  "HtmlElement",
  "HtmlInputElement",
  "HtmlTextAreaElement",
  "Location",
  "Request",
  "RequestInit",
  "RequestMode",
  "Response",
  "Storage",
  "Window",
]

