[package]
name = "efrro_form_c_json"
version = "2019.1214.1338"
authors = ["Luciano Bestia <luciano.bestia@gmail.com>"]
edition = "2018"
description="User iterface to enter data for e-frro and export it as json."
repository = "https://github.com/LucianoBestia/efrro_form_c_json"
readme = "README.md"
license = "MIT"
keywords = ["wasm"]
categories = ["frro","form C"]

[lib]
crate-type = ["cdylib"]

[profile.release]
#smaller wasm size
lto = true
#optimize for size 's', more opt for size 'z', 3 for speed
opt-level = 's'

[features]
default = ["console_error_panic_hook","wee_alloc"]

[dependencies]
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = { version = "0.4.5", optional = true }
wasm-bindgen = { version = "0.2.55", features = ["serde-serialize"] }
js-sys = "0.3"
#unwrap = "1.2.1"
dodrio = "0.1.0"
console_error_panic_hook = {version="0.1.6", optional=true}
serde = { version = "1.0.103", features = ["derive"] }
serde_derive = "1.0.98"
serde_json ={version="1.0.44", features=["preserve_order"]}
futures = "0.1.26"
wasm-bindgen-futures = "0.3.26"
#log = "0.4.8"
typed-html = {version="0.2.1", features = ["dodrio_macro"]}
indexmap={ version = "1.3.0", features = ["serde-1"] }
conv = "0.3.3"
urlencoding = "1.0.0"

[dependencies.web-sys]
version = "0.3.32"
features = [
  "console",
  "Document",
  "Element",
  "Event",
  "EventListener",
  "EventTarget",
  "HtmlDocument",
  "HtmlElement",
  "HtmlInputElement",
  "HtmlSelectElement",
  "HtmlTextAreaElement",
  "Location",
  "Navigator",
  "Node",
  "Range",
  "Request",
  "RequestInit",
  "RequestMode",
  "Response",
  "Selection",
  "Storage",
  "Window",
]

